k8s/talos/apps/arr-stack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arr-stack
  annotations:
    volsync.backube/privileged-movers: "true"
