k8s/talos/apps/arr-stack/unpackerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unpackerr
  namespace: arr-stack
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: unpackerr
  template:
    metadata:
      labels:
        app: unpackerr
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: topology.kubernetes.io/zone
                    operator: In
                    values:
                      - hyper1
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: unpackerr
          image: ghcr.io/unpackerr/unpackerr:0.15.2
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
      volumes:
        - name: data
          nfs:
            server: nas.local.bigd.no
            path: /volume1/shared-data/media
