k8s/talos/apps/arr-stack/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: arr-stack
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway-private
      namespace: traefik
      sectionName: local-bigd-no
  hostnames:
    - "sonarr.local.bigd.no"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: sonarr
          port: 8989
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: arr-stack
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway-private
      namespace: traefik
      sectionName: local-bigd-no
  hostnames:
    - "radarr.local.bigd.no"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: radarr
          port: 7878
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-4k
  namespace: arr-stack
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway-private
      namespace: traefik
      sectionName: local-bigd-no
  hostnames:
    - "radarr-4k.local.bigd.no"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: radarr-4k
          port: 7878
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  namespace: arr-stack
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway-private
      namespace: traefik
      sectionName: local-bigd-no
  hostnames:
    - "bazarr.local.bigd.no"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: bazarr
          port: 6767
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr-4k
  namespace: arr-stack
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway-private
      namespace: traefik
      sectionName: local-bigd-no
  hostnames:
    - "bazarr-4k.local.bigd.no"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: bazarr-4k
          port: 6767
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flaresolverr
  namespace: arr-stack
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway-private
      namespace: traefik
      sectionName: local-bigd-no
  hostnames:
    - "flaresolverr.local.bigd.no"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: flaresolverr
          port: 8191
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cleanuparr
  namespace: arr-stack
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway-private
      namespace: traefik
      sectionName: local-bigd-no
  hostnames:
    - "cleanuparr.local.bigd.no"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: cleanuparr
          port: 11011
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tdarr
  namespace: arr-stack
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway-private
      namespace: traefik
      sectionName: local-bigd-no
  hostnames:
    - "tdarr.local.bigd.no"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: tdarr
          port: 8265
          weight: 1
